check_error_queue_utf8_2.txt
cargo : warning: C:\Users\Trinity\Documents\daydream\As
k_Pete\crates\ask_pete_client\Cargo.toml: unused 
manifest key: dependencies.tokio.getrandom
At line:1 char:1
+ cargo check -p ask_pete_server 2>&1 | Out-File 
-Encoding utf8 check_e ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (warning:  
   C:\Use...tokio.getrandom:String) [], RemoteExcepti  
  on
    + FullyQualifiedErrorId : NativeCommandError
 
warning: unused variable: `i`
  --> crates\ask_pete_ai\src\iron_split.rs:96:13
   |
96 |         for i in 0..max_tokens {
   |             ^ help: if this is intentional, 
prefix it with an underscore: `_i`
   |
   = note: `#[warn(unused_variables)]` (part of 
`#[warn(unused)]`) on by default

warning: `ask_pete_ai` (lib) generated 1 warning
    Checking ask_pete_server v0.1.0 (C:\Users\Trinity\D
ocuments\daydream\Ask_Pete\crates\ask_pete_server)
error: error returned from database: relation 
"vocabulary_words" does not exist
  --> crates\ask_pete_server\src\services\weigh_station
.rs:70:19
   |
70 |           let row = sqlx::query_as!(
   |  ___________________^
71 | |             WordPhysics,
72 | |             r#"
73 | |             SELECT word, definition, 
grade_level, tier, weight, tags
...  |
76 | |             word
77 | |         )
   | |_________^
   |
   = note: this error originates in the macro 
`$crate::sqlx_macros::expand_query` which comes from 
the expansion of the macro `sqlx::query_as` (in 
Nightly builds, run with -Z macro-backtrace for more 
info)

error[E0432]: unresolved import 
`crate::services::weigh_station::WeighStation`
 --> crates\ask_pete_server\src\routes\debug.rs:2:5
  |
2 | use crate::services::weigh_station::WeighStation;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
no `WeighStation` in `services::weigh_station`
  |
help: consider importing this struct instead
  |
2 - use crate::services::weigh_station::WeighStation;
2 + use infra_services::weigh_station::WeighStation;
  |

error[E0432]: unresolved import 
`crate::handlers::weigh_station::WeighStation`
  --> crates\ask_pete_server\src\routes\weigh_station_r
outes.rs:11:38
   |
11 | use 
crate::handlers::weigh_station::{WeighStation, 
WordPhysics};
   |                                      ^^^^^^^^^^^^ 
no `WeighStation` in `handlers::weigh_station`
   |
   = help: consider importing this struct instead:
           infra_services::weigh_station::WeighStation

error[E0433]: failed to resolve: could not find 
`chat_queue` in `services`
  --> crates\ask_pete_server\src\state.rs:27:38
   |
27 |     pub chat_queue: 
crate::services::chat_queue::ChatQueueService, // 
[NEW] Job Queue
   |                                      ^^^^^^^^^^ 
could not find `chat_queue` in `services`

error[E0433]: failed to resolve: could not find 
`chat_queue` in `services`
   --> crates\ask_pete_server\src\main.rs:440:39
    |
440 |     let chat_queue = crate::services::chat_queue:
:ChatQueueService::new(socratic_engine.clone());
    |                                       ^^^^^^^^^^ 
could not find `chat_queue` in `services`

error[E0603]: struct import `WordPhysics` is private
  --> crates\ask_pete_server\src\routes\weigh_station_r
outes.rs:11:52
   |
11 | use 
crate::handlers::weigh_station::{WeighStation, 
WordPhysics};
   |                                                   
 ^^^^^^^^^^^ private struct import
   |
note: the struct import `WordPhysics` is defined 
here...
  --> crates\ask_pete_server\src\handlers\weigh_station
.rs:1:5
   |
 1 | use crate::services::weigh_station::WordPhysics;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: ...and refers to the struct `WordPhysics` which 
is defined here
  --> crates\ask_pete_server\src\services\weigh_station
.rs:9:1
   |
 9 | pub struct WordPhysics {
   | ^^^^^^^^^^^^^^^^^^^^^^ you could import this 
directly
help: import `WordPhysics` through the re-export
   |
11 | use 
crate::handlers::weigh_station::{WeighStation, 
services::weigh_station::WordPhysics};
   |                                                   
 +++++++++++++++++++++++++

error[E0282]: type annotations needed
  --> crates\ask_pete_server\src\routes\pete.rs:91:25
   |
91 |         Some(status) => 
Json(status).into_response(),
   |                         ^^^^         
------------- type must be known at this point
   |                         |
   |                         cannot infer type of the 
type parameter `T` declared on the struct `Json`
   |
help: consider specifying the generic argument
   |
91 |         Some(status) => 
Json::<T>(status).into_response(),
   |                             +++++

error[E0599]: no method named `lock` found for 
reference `&Arc<WeighStationService>` in the current 
scope
  --> crates\ask_pete_server\src\routes\weigh_station_r
outes.rs:35:41
   |
35 |         let mut station = 
station_mutex.lock().await;
   |                                         ^^^^ 
method not found in `&Arc<WeighStationService>`
   |
   = help: items from traits can only be used if the 
trait is implemented and in scope
   = note: the following traits define an item `lock`, 
perhaps you need to implement one of them:
           candidate #1: `lock_api::mutex::RawMutex`
           candidate #2: `sqlx::migrate::Migrate`

Some errors have detailed explanations: E0282, E0432, 
E0433, E0599, E0603.
For more information about an error, try `rustc 
--explain E0282`.
error: could not compile `ask_pete_server` (bin 
"ask_pete_server") due to 8 previous errors
